--- a/painelDeTasks.html
+++ b/painelDeTasks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Tarefas</title>
-    <link rel="stylesheet" href="./estilos/style.css">s
+    <link rel="stylesheet" href="./estilos/style.css">
 </head>
 <body>
     <div class="sidebar">
