--- a/Signup.html
+++ b/Signup.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="form">
             <h1>Criar Conta</h1>
-            <form action="CadastrarUsuário.jsp">
+            <form action="painelDeTasks.html">
                 <input type="email" placeholder="E-mail">
                 <input type="text" placeholder="Nome de Usuário">
                 <input type="password" placeholder="Senha">
