--- a/painelDeTasks.html
+++ b/painelDeTasks.html
@@ -50,12 +50,13 @@
     </style>
 </head>
 <body>
-    <div class="sidebar">
+    <div class="sidebar"><ul>
         <h2>SoftLeve</h2>
-        <ul>
+
             <li><a href="Ger_Usuario.html"><span>👥</span> Gerenciar Usuários</a></li>
-            <li><span>⚙️</span> <a href="#" onclick="generateReport()">Gerar relatório</a></li>
-            <li><span>👤</span> Conta</li>
+            <li><span>⚙️</span> <a href="generateReport.html" onclick="generateReport()">Gerar relatório</a></li>
+            <li><span>👤</span> Conta</li> 
+        
         </ul>
     </div>
     
